webpack html cli

--- a/html/my_site/src/about.html
+++ b/html/my_site/src/about.html
@@ -11,5 +11,8 @@
 
     </div>
     <span class="test">hello css-loader</span>
+    <div></div>
+    <a href="/index.html" rel="noopener noreferrer">index</a>
+    <a href="./me.html">me</a>
 </body>
 </html>
