--- a/html/my_site/src/me.html
+++ b/html/my_site/src/me.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%=htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
+    <span class="test">hello me</span>
     <div>
-        <h1>12345687</h1>
-        <a href="./src/about.html" rel="noopener noreferrer">about</a>
-        <a href="./src/me.html" rel="noopener noreferrer">me</a>
+        <a href="/index.html" rel="noopener noreferrer">index</a>
     </div>
 </body>
 </html>
