--- a/html/主站开发/展台/index.html
+++ b/html/主站开发/展台/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="甘霖" />
     <meta name="robots" content="all" />
     <title>甘霖</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="./js/jquery-3.5.1.min.js"></script>
@@ -18,54 +19,19 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        .selector-for-some-widget {
-            box-sizing: content-box;
-        }
-
-        body {
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .content {
-            height: 100vh;
-        }
-
-        .content::-webkit-scrollbar {
-            display: none;
-        }
-        .imgHover{
-            position: relative;
-        }
-        .hover{
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top:0;
-            background-color: rgba(0, 0, 0, .3);
-            animation:imghover .3s ease-in-out;
-        }
-        @keyframes imghover{
-            0% {
-                opacity:0;
-            }
-            40% {
-                opacity:0;
-            }
-            100% {
-                opacity:1;
-            }
-        }
     </style>
 </head>
 
-<body>
-    <div class="content overflow-auto">
+<body class="p-2">
+     <header class="col-sm-12  text-center ">
+        <h2 class="headerTitle">
+            <div>浮</div>
+            <div>生</div>
+            <div>若</div>
+            <div>梦</div>
+        </h2>
+    </header>
+    <!--<div class="content overflow-auto">
         <div class="container ">
             <div class="row" id='box'>
                 <div class="col-sm">
@@ -78,36 +44,36 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
 <script type="text/javascript">
-    const cardList = [
-        { imgUrl: "./static/1.jpg", title: "1" },
-        { imgUrl: "./static/2.jpg", title: "2" },
-        { imgUrl: "./static/3.jpg", title: "3" },
-        { imgUrl: "./static/3.jpg", title: "3" }
-    ]
+    // const cardList = [
+    //     { imgUrl: "./static/1.jpg", title: "1" },
+    //     { imgUrl: "./static/2.jpg", title: "2" },
+    //     { imgUrl: "./static/3.jpg", title: "3" },
+    //     { imgUrl: "./static/3.jpg", title: "3" }
+    // ]
     // cardList.forEach(item => {
     //     $("#box").append(appendCard(item.imgUrl, item.title))
     // });
-    function appendCard(imgUrl = "./static/2.jpg", title = "") {
-        let template = `<div class="col-sm">
-                            <div class="card" style="width:100%;min-width: 18rem;margin-top:5px;">
-                                <div><img src="${imgUrl}" class="card-img-top" alt="3"></div>
-                                <div class="card-body">
-                                    <p class="card-text">${title}</p>
-                                </div>
-                            </div>
-                        </div>`
-        return template
-    }
+    // function appendCard(imgUrl = "./static/2.jpg", title = "") {
+    //     let template = `<div class="col-sm">
+    //                         <div class="card" style="width:100%;min-width: 18rem;margin-top:5px;">
+    //                             <div><img src="${imgUrl}" class="card-img-top" alt="3"></div>
+    //                             <div class="card-body">
+    //                                 <p class="card-text">${title}</p>
+    //                             </div>
+    //                         </div>
+    //                     </div>`
+    //     return template
+    // }
 
-    $(".imgHover").hover(function(){
-        $(this).append(`<div class="hover"></div>`)
-        // $(this).find(".hover").fadeIn()
-    },function(){
-        $(this).find(".hover").hide()
-    })
+    // $(".imgHover").hover(function(){
+    //     $(this).append(`<div class="hover"></div>`)
+    //     // $(this).find(".hover").fadeIn()
+    // },function(){
+    //     $(this).find(".hover").hide()
+    // })
 </script>
