--- a/html/主站开发/展台/index.html
+++ b/html/主站开发/展台/index.html
@@ -4,76 +4,79 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <meta name="keywords" content="HTML,甘霖" />
-    <meta name="description" content="" />
-    <meta name="author" content="甘霖" />
-    <meta name="robots" content="all" />
-    <title>甘霖</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>show</title>
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.css">
+    <link rel="stylesheet" href="./style.css">
     <style>
+        body {
+            background: #4ecbd4;
+            color: #fff;
+        }
     </style>
 </head>
 
-<body class="p-2">
-     <header class="col-sm-12  text-center ">
-        <h2 class="headerTitle">
-            <div>浮</div>
-            <div>生</div>
-            <div>若</div>
-            <div>梦</div>
-        </h2>
-    </header>
-    <!--<div class="content overflow-auto">
-        <div class="container ">
-            <div class="row" id='box'>
-                <div class="col-sm">
-                    <div class="card" style="width:100%;min-width: 18rem;margin-top:5px;">
-                        <div class="imgHover"><img src="./static/2.jpg" class="card-img-top" alt="3"></div>
-                        <div class="card-body">
-                            <p class="card-text">2</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<body>
+    <div id="app" class="content" style="display: none;" v-show="appstart">
+        <header>
+            <a-col span="24">
+                <span class="title_text">M</span>
+                <span class="title_text">y</span>&nbsp;
+                <span class="title_text">P</span>
+                <span class="title_text">r</span>
+                <span class="title_text">o</span>
+                <span class="title_text">j</span>
+                <span class="title_text">e</span>
+                <span class="title_text">c</span>
+                <span class="title_text">t</span>
+                <!-- <h1 style="margin-bottom: 0;">My Project</h1> -->
+            </a-col>
+        </header>
+        <!-- <a-button @click="changeMode('list')">list</a-button>
+        <a-button @click="changeMode('grid')">grid</a-button> -->
+        <div class="content">
+            <a-row :gutter="[20,20]">
+                <a-col span="8" v-for="(item,index) in list" :key="item" :xs="{span:24,gutter:[20,40]}" :sm="12" :md="8"
+                    :lg="6" :xl="4">
+                    <a-card hoverable @click="goDetail(item)" :bodyStyle="{height:'80px'}" v-if="showMode == 'grid'"
+                        class="Card" :bordered="false">
+                        <a-card-meta :title="item.title"></a-card-meta>
+                    </a-card>
+                </a-col>
+            </a-row>
         </div>
-    </div> -->
+        <div id="components-back-top-demo-custom">
+            <a-back-top></a-back-top>
+        </div>
+    </div>
 </body>
 
 </html>
-<script type="text/javascript">
-    // const cardList = [
-    //     { imgUrl: "./static/1.jpg", title: "1" },
-    //     { imgUrl: "./static/2.jpg", title: "2" },
-    //     { imgUrl: "./static/3.jpg", title: "3" },
-    //     { imgUrl: "./static/3.jpg", title: "3" }
-    // ]
-    // cardList.forEach(item => {
-    //     $("#box").append(appendCard(item.imgUrl, item.title))
-    // });
-    // function appendCard(imgUrl = "./static/2.jpg", title = "") {
-    //     let template = `<div class="col-sm">
-    //                         <div class="card" style="width:100%;min-width: 18rem;margin-top:5px;">
-    //                             <div><img src="${imgUrl}" class="card-img-top" alt="3"></div>
-    //                             <div class="card-body">
-    //                                 <p class="card-text">${title}</p>
-    //                             </div>
-    //                         </div>
-    //                     </div>`
-    //     return template
-    // }
-
-    // $(".imgHover").hover(function(){
-    //     $(this).append(`<div class="hover"></div>`)
-    //     // $(this).find(".hover").fadeIn()
-    // },function(){
-    //     $(this).find(".hover").hide()
-    // })
+<script src="http://cdn.jsdelivr.net/npm/vue"></script>
+<script src="http://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.js"></script>
+<script src="./data.js"></script>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            appstart: true,
+            list: [],
+            showMode: "grid"
+        },
+        created() {
+            this.list = listData;
+        },
+        methods: {
+            goDetail(item) {
+                window.open(item.url)
+            },
+            changeMode(mode) {
+                if (mode) {
+                    this.showMode = mode
+                } else {
+                    this.showMode = "list"
+                }
+            }
+        },
+    })
 </script>
