--- a/html/主站开发/展台/index.html
+++ b/html/主站开发/展台/index.html
@@ -39,11 +39,12 @@
         <a-button @click="changeMode('grid')">grid</a-button> -->
         <div class="content">
             <a-row :gutter="[20,20]">
-                <a-col span="8" v-for="(item,index) in list" :key="item" :xs="{span:24,gutter:[20,40]}" :sm="12" :md="8" :lg="6" :xl="4">
+                <a-col span="8" v-for="(item,index) in list" :key="item" :xs="{span:24,gutter:[20,40]}" :sm="12" :md="8"
+                    :lg="6" :xl="4">
                     <a-card hoverable @click="goDetail(item)" :bodyStyle="{height:'80px'}" v-if="showMode == 'grid'"
                         class="Card" :bordered="false">
+                        <img class="img" slot="cover" :alt="item.title" :src="item.imgUrl" />
                         <a-card-meta :title="item.title"></a-card-meta>
-                        <span v-text="item.description || '   '"></span>
                     </a-card>
                 </a-col>
             </a-row>
@@ -65,6 +66,22 @@
             appstart: true,
             list: [],
             showMode: "grid"
+        },
+        beforeCreate() {
+            var colors = [
+                { bg: "#4ecbd4", text: "#f6f5f7", m1: "#57e3ed", m2: "#45b3bb" },
+                { bg: "#55b9f3", text: "#f6f5f7", m1: "#62d5ff", m2: "#489dcf" },
+                { bg: "#dca3a3", text: "#f6f5f7", m1: "#fdbbbb", m2: "#bb8b8b" },
+                { bg: "#f1707d", text: "#f6f5f7", m1: "#ff8190", m2: "#cd5f6a" },
+                { bg: "#e7dbca", text: "#001f3f", m1: "#fffce8", m2: "#c4baac" },
+                { bg: "#b8f1cc", text: "#001f3f", m1: "#d4ffeb", m2: "#9ccdad" },
+            ]
+            var len = colors.length
+            var color = colors[Math.floor(Math.random() * len) || 0]
+            document.documentElement.style.setProperty('--text-color', color.text)
+            document.documentElement.style.setProperty('--main-bg', color.bg)
+            document.documentElement.style.setProperty('--shadow-1', color.m1)
+            document.documentElement.style.setProperty('--shadow-2', color.m2)
         },
         created() {
             this.list = listData;
