--- a/html/主站开发/展台/index.html
+++ b/html/主站开发/展台/index.html
@@ -13,10 +13,32 @@
     <meta name="robots" content="all">
     <meta name="author" content="ganlin">
     <meta http-equiv="expires" content="0">
-    <title>show</title>
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.css">
+    <title>展</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        .item{
+            opacity: 0;
+            transform: translateY(150px);
+        }
+    </style>
+    <script>
+        var colors = [
+            { bg: "#4ecbd4", text: "#f6f5f7", m1: "#57e3ed", m2: "#45b3bb" },
+            { bg: "#55b9f3", text: "#f6f5f7", m1: "#62d5ff", m2: "#489dcf" },
+            { bg: "#dca3a3", text: "#f6f5f7", m1: "#fdbbbb", m2: "#bb8b8b" },
+            { bg: "#f1707d", text: "#f6f5f7", m1: "#ff8190", m2: "#cd5f6a" },
+            { bg: "#e7dbca", text: "#001f3f", m1: "#fffce8", m2: "#c4baac" },
+            { bg: "#b8f1cc", text: "#001f3f", m1: "#d4ffeb", m2: "#9ccdad" },
+        ]
+        var len = colors.length
+        var color = colors[Math.floor(Math.random() * len) || 0]
+        document.documentElement.style.setProperty('--text-color', color.text)
+        document.documentElement.style.setProperty('--main-bg', color.bg)
+        document.documentElement.style.setProperty('--shadow-1', color.m1)
+        document.documentElement.style.setProperty('--shadow-2', color.m2)
+    </script>
 </head>
 
 <body>
@@ -32,21 +54,20 @@
                 <span class="title_text">e</span>
                 <span class="title_text">c</span>
                 <span class="title_text">t</span>
-                <!-- <h1 style="margin-bottom: 0;">My Project</h1> -->
             </a-col>
         </header>
-        <!-- <a-button @click="changeMode('list')">list</a-button>
-        <a-button @click="changeMode('grid')">grid</a-button> -->
         <div class="content">
             <a-row :gutter="[20,20]">
-                <a-col span="8" v-for="(item,index) in list" :key="item" :xs="{span:24,gutter:[20,40]}" :sm="12" :md="8"
-                    :lg="6" :xl="4">
-                    <a-card hoverable @click="goDetail(item)" :bodyStyle="{height:'80px'}" v-if="showMode == 'grid'"
-                        class="Card" :bordered="false">
-                        <img class="img" slot="cover" :alt="item.title" :src="'https://qn.soulfree.cn'+item.imgUrl+'?imageView2/1/w/1200/h/800/interlace/1/q/49'" />
-                        <a-card-meta :title="item.title"></a-card-meta>
-                    </a-card>
-                </a-col>
+                <transition-group name="list" tag="p" v-on:enter="enter">
+                    <a-col span="8" v-for="(item,index) in list" :key="item" :xs="{span:24,gutter:[20,40]}" :sm="12"
+                        :md="8" :lg="6" :xl="4" class="item">
+                        <a-card hoverable @click="goDetail(item)" :bodyStyle="{height:'80px'}" v-if="showMode == 'grid'"
+                            class="Card" :bordered="false">
+                            <img class="img" slot="cover" :alt="item.title" v-lazy="'https://qn.soulfree.cn'+item.imgUrl+'?imageView2/1/w/1200/h/800/interlace/1/q/45'" />
+                            <a-card-meta :title="item.title"></a-card-meta>
+                        </a-card>
+                    </a-col>
+                </transition-group>
             </a-row>
         </div>
         <div id="components-back-top-demo-custom">
@@ -56,35 +77,33 @@
 </body>
 
 </html>
-<script src="http://cdn.jsdelivr.net/npm/vue"></script>
-<script src="http://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+<script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.js"></script>
+<script src="https://unpkg.com/vue-lazyload@1.3.3/vue-lazyload.js"></script>
 <script src="./data.js"></script>
+
 <script>
+    Vue.use(VueLazyload, {
+        preLoad: 1,
+        error: 'https://qn.soulfree.cn/Snipaste_2021-06-27_13-48-51.png?imageView2/1/w/1200/h/800/interlace/1/q/1',
+        loading: 'https://qn.soulfree.cn/Snipaste_2021-06-27_13-48-51.png?imageView2/1/w/1200/h/800/interlace/1/q/1',
+    })
     new Vue({
         el: '#app',
         data: {
             appstart: true,
             list: [],
-            showMode: "grid"
-        },
-        beforeCreate() {
-            var colors = [
-                { bg: "#4ecbd4", text: "#f6f5f7", m1: "#57e3ed", m2: "#45b3bb" },
-                { bg: "#55b9f3", text: "#f6f5f7", m1: "#62d5ff", m2: "#489dcf" },
-                { bg: "#dca3a3", text: "#f6f5f7", m1: "#fdbbbb", m2: "#bb8b8b" },
-                { bg: "#f1707d", text: "#f6f5f7", m1: "#ff8190", m2: "#cd5f6a" },
-                { bg: "#e7dbca", text: "#001f3f", m1: "#fffce8", m2: "#c4baac" },
-                { bg: "#b8f1cc", text: "#001f3f", m1: "#d4ffeb", m2: "#9ccdad" },
-            ]
-            var len = colors.length
-            var color = colors[Math.floor(Math.random() * len) || 0]
-            document.documentElement.style.setProperty('--text-color', color.text)
-            document.documentElement.style.setProperty('--main-bg', color.bg)
-            document.documentElement.style.setProperty('--shadow-1', color.m1)
-            document.documentElement.style.setProperty('--shadow-2', color.m2)
+            showMode: "grid",
+            renderIndex: 1
         },
         created() {
-            this.list = listData;
+            var that = this
+            setTimeout(function () {
+                for (var i = 0; i < listData.length; i++) {
+                    that.list.push(listData[i])
+                }
+            }, 100);
         },
         methods: {
             goDetail(item) {
@@ -96,7 +115,15 @@
                 } else {
                     this.showMode = "list"
                 }
-            }
+            },
+            enter: function (el, done) {
+                var delay = this.renderIndex * 150
+                this.renderIndex++
+                Velocity(el,
+                    { opacity: 1 , translateY:"0"},
+                    { duration: delay, complete: done }
+                )
+            },
         },
     })
 </script>
