--- a/html/随机密码/index.html
+++ b/html/随机密码/index.html
@@ -92,7 +92,7 @@
             <div class="form-group list-group-item" style="margin-bottom: 0 !important;">
                 <label class="form-label" for="length">密码长度：</label>
                 <div class="form-check form-check-inline ">
-                    <input type="number" class="form-control" id="length" min='1' value='12'>
+                    <input type="number" class="form-control" id="length" min='1' value='12' max='128'>
                 </div>
             </div>
         </form>
