--- a/html/主站开发/展台/index.html
+++ b/html/主站开发/展台/index.html
@@ -77,7 +77,7 @@
 </body>
 
 </html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/velocity-animate@1.2.3/velocity.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 <script src="https://cdn.jsdelivr.net/npm/ant-design-vue@1.7.4/dist/antd.min.js"></script>
 <script src="https://unpkg.com/vue-lazyload@1.3.3/vue-lazyload.js"></script>
